# tft-modular

./: .gitignore  Cargo.toml  README.md  package.json  pnpm-lock.yaml  vercel.json
crates/engine-core/: Cargo.toml
crates/engine-core/src/: command.rs  economy.rs  fixed.rs  hash_state.rs  ids.rs  lib.rs  match_state.rs  plugin.rs  pool.rs  replay.rs  rng.rs  shop.rs
crates/engine-core/src/combat/: effects.rs  mod.rs  targeting.rs
crates/engine-core/tests/: combat_tests.rs  determinism.rs  economy_tests.rs
crates/engine-wasm/: Cargo.toml
crates/engine-wasm/src/: lib.rs
docs/superpowers/plans/: 2026-07-18-tft-modular-mvp.md  mvp-dod-checklist.md
docs/superpowers/specs/: 2026-07-18-tft-modular-mvp-design.md
mods/reference-mod/: manifest.json
mods/reference-mod/abilities/: guard_pulse.json  mist_balm.json  spark_cut.json
mods/reference-mod/traits/: bulwark.json  emberkin.json
mods/reference-mod/units/: ember_scout.json  mist_healer.json  stone_warden.json
mods/shinobi-leaf/: manifest.json
mods/shinobi-leaf/abilities/: chakra_blade.json  heal_jutsu.json  iron_skin.json  rasen_orb.json  sand_coffin.json  thunder_fall.json
mods/shinobi-leaf/traits/: leaf.json  mystic.json  sand.json  storm.json
mods/shinobi-leaf/units/: desert_wall.json  green_healer.json  iron_monk.json  leaf_runner.json  scarlet_vessel.json  shadow_blade.json  storm_sniper.json  thunder_prince.json
tools/: bundle-mod.mjs
tools/validator-cli/: package.json
tools/validator-cli/src/: cli.ts
